bumped lot of external stuff to new versions